# efiloader

./: Cargo.toml
src/: blockio.rs  bootservices.rs  cmo.rs  configtable.rs  devicepath.rs  initrdloadfile2.rs  lib.rs  loadedimage.rs  memattr.rs  memmap.rs  memorytype.rs  multiprotocol_aarch64.s  multiprotocol_x86_64.s  peloader.rs  poolalloc.rs  rng.rs  runtimeservices.rs  simpletext.rs  start_image_aarch64.s  start_image_x86_64.s  status.rs  systemtable.rs  tableheader.rs
